src/objects/Whole_Person_Solution_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WP Anchor</fullName>
                    <default>true</default>
                    <label>WP Anchor</label>
                </value>
                <value>
                    <fullName>WP Non-Anchor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetes</fullName>
                    <default>true</default>
                    <label>Diabetes</label>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Prediabetes</fullName>
                </value>
                <value>
                    <fullName>Weight Management</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DM Solution</fullName>
                </value>
                <value>
                    <fullName>CV Solution</fullName>
                </value>
                <value>
                    <fullName>DP Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Whole Person Solution Mapping</label>
    <listViews>
        <fullName>All_Mappings</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Solution__c</columns>
        <columns>Program__c</columns>
        <columns>Program_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Mappings</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Whole Person Solution Mappings</pluralLabel>
</CustomObject>